Basic recruitment task done (points 1-5,7) 6a,6b to be done

--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
@@ -133,6 +133,11 @@ basic.product.updateDate.label = Update date
 basic.product.createUser.label = Create user
 basic.product.updateUser.label = Update user
 
+basic.purchase.product.label = Product
+basic.purchase.quantity.label = Quantity
+basic.purchase.price.label = Price
+basic.purchase.date.label = Date
+
 basic.currency.currency.label = Currency
 basic.currency.alphabeticCode.label = Alphabetic code
 basic.currency.currency.label = Currency name
@@ -420,6 +425,15 @@ basic.productSubstituteComponentDetails.window.mainTab.substituteComponent.heade
 basic.productSubstituteComponentDetails.window.mainTab.substituteComponent.unit.label = Unit
 basic.productSubstituteComponentDetails.window.mainTab.substituteComponent.product.lookup.window.grid.header = Select product
 
+basic.purchasesList.window.header = List of Purchases:
+basic.purchasesList.window.mainTab.purchases.header = Purchases:
+basic.purchasesList.window.mainTab.purchases.perPage = Purchases per page:
+
+basic.purchasesList.message.getAveragePricesAll = Average price of all purchases: {0}basic.purchasesList.message.getAveragePriceOfProduct = Average price of purchases with this product: {0}
+
+basic.purchaseDetails.window.mainTab.purchase.headerNew = New purchase:
+basic.purchaseDetails.window.mainTab.purchase.headerEdit = Purchase:
+
 basic.shiftsList.window.mainTab.shifts.header = Shifts
 
 basic.shiftDetails.window.mainTab.shift.headerNew = New shift
@@ -512,6 +526,11 @@ basic.productDetails.window.ribbon.conversions = Conversions
 basic.productsList.window.ribbon.conversions.getDefaultConversions = Update conversions
 basic.productsList.window.ribbon.conversions = Conversions
 
+basic.purchaseDetails.window.ribbon.conversions.getDefaultConversions = Calculate average
+basic.purchaseDetails.window.ribbon.conversions = Calculations
+basic.purchasesList.window.ribbon.conversions.getDefaultConversions = Calculate average
+basic.purchasesList.window.ribbon.conversions = Calculations
+
 basic.workstationDetails.window.ribbon.atachments.downloadAtachment = Download attachment
 basic.workstationDetails.window.ribbon.atachments = Attachments
 
@@ -542,3 +561,5 @@ basic.product.parent.belongsToSameFamily = Product can't belong to it self.
 basic.product.parent.parentIsNotFamily = Selected product isn't products family.
 basic.product.validateError.unitFrom.doesNotMatchUnitConversionItem = Unit doesn't match with products unit.
 basic.product.ean.onlyNumericValue = Value is not a number.
+
+basic.purchase.sameProductAndPriceExist = No purchase can contain the same product with the same price
