poprawki w kodzie, wciąż do zrobienia punkty 6a i 6b problem z obliczaniem średniej dla zamówień z produktem

--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
@@ -431,8 +431,8 @@ basic.purchasesList.window.mainTab.purchases.perPage = Purchases per page:
 
 basic.purchasesList.message.getAveragePricesAll = Average price of all purchases: {0}basic.purchasesList.message.getAveragePriceOfProduct = Average price of purchases with this product: {0}
 
-basic.purchaseDetails.window.mainTab.purchase.headerNew = New purchase:
-basic.purchaseDetails.window.mainTab.purchase.headerEdit = Purchase:
+basic.purchaseDetails.window.form.headerNew = New purchase:
+basic.purchaseDetails.window.form.headerEdit = Purchase:
 
 basic.shiftsList.window.mainTab.shifts.header = Shifts
 
@@ -526,10 +526,10 @@ basic.productDetails.window.ribbon.conversions = Conversions
 basic.productsList.window.ribbon.conversions.getDefaultConversions = Update conversions
 basic.productsList.window.ribbon.conversions = Conversions
 
-basic.purchaseDetails.window.ribbon.conversions.getDefaultConversions = Calculate average
-basic.purchaseDetails.window.ribbon.conversions = Calculations
-basic.purchasesList.window.ribbon.conversions.getDefaultConversions = Calculate average
-basic.purchasesList.window.ribbon.conversions = Calculations
+basic.purchaseDetails.window.ribbon.calculations.getAveragePriceOfProduct = Calculate average
+basic.purchaseDetails.window.ribbon.calculations = Calculations
+basic.purchasesList.window.ribbon.calculations.getAveragePriceOfAll = Calculate average
+basic.purchasesList.window.ribbon.calculations = Calculations
 
 basic.workstationDetails.window.ribbon.atachments.downloadAtachment = Download attachment
 basic.workstationDetails.window.ribbon.atachments = Attachments
