--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
@@ -41,7 +41,7 @@ basic.dashboard.react.link = Generowanie zapotrzebowania materia\u0142owego
 ### MENU
 
 basic.menu.home.home = G\u0142\u00f3wna
-basic.menu.basic = Podstawowe2
+basic.menu.basic = Podstawowe
 basic.menu.basic.description = Takie jak produkty, pracownicy, zmiany, firmy, itp.
 basic.menu.basic.companies = Firmy
 basic.menu.administration.countries = Kraje
@@ -432,8 +432,8 @@ basic.purchasesList.window.mainTab.purchases.perPage = Zakup\u00f3w na stronie:
 basic.purchasesList.message.getAveragePricesAll = \u015arednia cena z wszystkich zakup\u00f3w: {0}
 basic.purchasesList.message.getAveragePriceOfProduct = Srednia cena produktu w zakupach {0}
 
-basic.purchaseDetails.window.mainTab.purchase.headerNew = Nowy zakup:
-basic.purchaseDetails.window.mainTab.purchase.headerEdit = Zakup:
+basic.purchaseDetails.window.form.headerNew = Nowy zakup:
+basic.purchaseDetails.window.form.headerEdit = Zakup:
 
 basic.shiftsList.window.mainTab.shifts.header = Zmiany
 
@@ -532,10 +532,10 @@ basic.productDetails.window.ribbon.conversions = Przeliczniki
 basic.productsList.window.ribbon.conversions.getDefaultConversions = Zaktualizuj przeliczniki
 basic.productsList.window.ribbon.conversions = Przeliczniki
 
-basic.purchaseDetails.window.ribbon.conversions.getDefaultConversions = Oblicz \u015bredni\u0105
-basic.purchaseDetails.window.ribbon.conversions = Obliczenia
-basic.purchasesList.window.ribbon.conversions.getDefaultConversions = Oblicz \u015bredni\u0105
-basic.purchasesList.window.ribbon.conversions = Obliczenia
+basic.purchaseDetails.window.ribbon.calculations.getAveragePriceOfProduct = Oblicz \u015bredni\u0105 cen\u0119 dla produktu
+basic.purchaseDetails.window.ribbon.calculations = Obliczenia
+basic.purchasesList.window.ribbon.calculations.getAveragePriceOfAll = Oblicz \u015bredni\u0105 cen\u0119 zakup\u00f3w
+basic.purchasesList.window.ribbon.calculations = Obliczenia
 
 basic.workstationDetails.window.ribbon.atachments.downloadAtachment = Pobierz za\u0142\u0105czniki
 basic.workstationDetails.window.ribbon.atachments = Za\u0142\u0105czniki
