poprawiony kod, nie wyrzuca błędów przy wyliczeniach wykonana podstawa zadania przymiarki do punktu 6

--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
@@ -429,7 +429,9 @@ basic.purchasesList.window.header = List of Purchases:
 basic.purchasesList.window.mainTab.purchases.header = Purchases:
 basic.purchasesList.window.mainTab.purchases.perPage = Purchases per page:
 
-basic.purchasesList.message.getAveragePricesAll = Average price of all purchases: {0}basic.purchasesList.message.getAveragePriceOfProduct = Average price of purchases with this product: {0}
+basic.purchasesList.message.getAveragePricesAll = Average price of all purchases: {0}
+basic.purchasesList.message.getAveragePricesSelected = Average price of selected purchases: {0}
+basic.purchasesList.message.getAveragePriceOfProduct = Average price of purchases with this product: {0}
 
 basic.purchaseDetails.window.form.headerNew = New purchase:
 basic.purchaseDetails.window.form.headerEdit = Purchase:
