--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
@@ -430,6 +430,7 @@ basic.purchasesList.window.mainTab.purchases.header = Zakupy:
 basic.purchasesList.window.mainTab.purchases.perPage = Zakup\u00f3w na stronie:
 
 basic.purchasesList.message.getAveragePricesAll = \u015arednia cena z wszystkich zakup\u00f3w: {0}
+basic.purchasesList.message.getAveragePricesSelected = \u015arednia cena z zaznaczonych zakup\u00f3w: {0}
 basic.purchasesList.message.getAveragePriceOfProduct = Srednia cena produktu w zakupach {0}
 
 basic.purchaseDetails.window.form.headerNew = Nowy zakup:
