--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_en.properties
@@ -134,6 +134,7 @@ basic.product.createUser.label = Create user
 basic.product.updateUser.label = Update user
 
 basic.purchase.product.label = Product
+basic.purchase.product.label.focus = Choose product
 basic.purchase.quantity.label = Quantity
 basic.purchase.price.label = Price
 basic.purchase.date.label = Date
