--- a/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
+++ b/mes-plugins/mes-plugins-basic/src/main/resources/basic/locales/basic_pl.properties
@@ -135,6 +135,7 @@ basic.product.createUser.label = Utworzony przez
 basic.product.updateUser.label = Zaktualizowany przez
 
 basic.purchase.product.label = Produkt
+basic.purchase.product.label.focus = Wybierz produkt
 basic.purchase.quantity.label = Ilo\u015b\u0107
 basic.purchase.price.label = Cena
 basic.purchase.date.label = Data
